--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="sign_up">SignUp</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+
+    <string name="home">Home</string>
+    <string name="buses">Buses</string>
+    <string name="stations">Stations</string>
+    <string name="favourite">Favourite</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
