--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="main_text">Main Text</string>
     <string name="subText">Sub Text</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
